feat: add ip reset function

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build": "cd android && ./gradlew bundleRelease",
+    "install-on-device": "npx react-native run-android --variant=release"
   },
   "jest": {
     "preset": "jest-expo"
@@ -26,18 +28,22 @@
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "lodash-es": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "url-parse": "^1.5.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash-es": "^4.17.6",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@types/url-parse": "^1.4.8",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
