feat: add localization

--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "expo-splash-screen": "~0.14.0",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
+    "i18n-js": "^3.9.2",
     "lodash-es": "^4.17.21",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-localize": "^2.2.1",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
