--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*":["./*"]
-    }
+      "@/*": ["./*"]
+    },
+    "resolveJsonModule": true
   }
 }
