--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudflare-ip-tester-app",
-  "version": "1.0.0",
+  "version": "0.3.0",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,7 +9,8 @@
     "eject": "expo eject",
     "test": "jest --watchAll",
     "build": "cd android && gradlew bundleRelease",
-    "install-on-device": "npx react-native run-android --variant=release"
+    "install-on-device": "npx react-native run-android --variant=release",
+    "changelog": "npx standard-version"
   },
   "jest": {
     "preset": "jest-expo"
@@ -52,6 +53,7 @@
     "@types/react-native": "~0.64.12",
     "@types/url-parse": "^1.4.8",
     "babel-plugin-module-resolver": "^4.1.0",
+    "conventional-changelog-cli": "^2.2.2",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
