ci: fix not release bug in android build

--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -3,7 +3,7 @@ name: Android Build ## name of the workflow
 on:
   push:
     branches:
-      - dev
+      - main
 
 permissions: 
   contents: write
