--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
+    "standard-version": "^9.3.2",
     "typescript": "~4.3.5"
   },
   "private": true
