--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Generate App APK
         run: |
-          cd android && ./gradlew assembleRelease --no-daemon
+          npm run build:release
 
       ## sign generated apk
       - name: Sign APK
