--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject",
     "test": "jest --watchAll",
     "build": "cd android && gradlew bundleRelease",
+    "build:release": "cd android && ./gradlew assembleRelease --no-daemon",
     "install-on-device": "npx react-native run-android --variant=release",
     "changelog": "npx standard-version"
   },
