feat: support full cloudflare ip v4 nodes

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash-es": "^4.17.21",
     "mobx": "^6.5.0",
     "mobx-react": "^7.3.0",
+    "netmask": "^2.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -50,6 +51,7 @@
     "@babel/core": "^7.12.9",
     "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
+    "@types/netmask": "^1.0.30",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/url-parse": "^1.4.8",
