--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.PAT_BOT_RELEASE  }}
+          fetch-depth: 0 # for changeLog
 
       - name: Set up our JDK environment # setup JDK environment: mandatory as we need to build  android project
         uses: actions/setup-java@v1.4.3
@@ -60,33 +61,12 @@ jobs:
           keyPassword: ${{ secrets.MYAPP_UPLOAD_KEY_PASSWORD }}
           fileRegex: .*apk 
       
-      - name: Changelog
+      - name: Release
         run: |          
           git config --local user.email "xianshenglu@qq.com"
           git config --local user.name "xianshenglu"
-          npm run changelog
-          git push --follow-tags 
-      
-      - name: 'Get Previous tag'
-        id: previous_tag
-        uses: "WyriHaximus/github-action-get-previous-tag@v1"
-        with:
-          fallback: 1.0.0    
-      
-      - name: Release        
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{steps.previous_tag.outputs.tag}}
-          fail_on_unmatched_files: true
-          files: |
-            ${{ github.workspace }}/${{ fromJson(steps.sign_app.outputs.signedReleaseFiles)[0] }}
-            ${{ github.workspace }}/${{ fromJson(steps.sign_app.outputs.signedReleaseFiles)[1] }}
-            ${{ github.workspace }}/${{ fromJson(steps.sign_app.outputs.signedReleaseFiles)[2] }}
-            ${{ github.workspace }}/${{ fromJson(steps.sign_app.outputs.signedReleaseFiles)[3] }}
-            ${{ github.workspace }}/${{ fromJson(steps.sign_app.outputs.signedReleaseFiles)[4] }}
-        
-
-
+          npm run release
+          
       ## Distribute app to Firebase App Distribution for testing / use google play internal track if you have a google play account
       # - name: upload artifact to Firebase App Distribution
       #   uses: wzieba/Firebase-Distribution-Github-Action@v1
