--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "cd android && gradlew bundleRelease",
     "build:release": "cd android && ./gradlew assembleRelease --no-daemon",
     "install-on-device": "npx react-native run-android --variant=release",
-    "changelog": "npx standard-version"
+    "changelog": "auto-changelog",
+    "release": "release-it --ci"
   },
   "jest": {
     "preset": "jest-expo"
@@ -49,17 +50,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@release-it/conventional-changelog": "^5.0.0",
     "@types/i18n-js": "^3.8.2",
     "@types/lodash-es": "^4.17.6",
     "@types/netmask": "^1.0.30",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/url-parse": "^1.4.8",
+    "auto-changelog": "^2.4.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "conventional-changelog-cli": "^2.2.2",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-test-renderer": "17.0.1",
+    "release-it": "^15.0.0",
     "standard-version": "^9.3.2",
     "typescript": "~4.3.5"
   },
