--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -66,7 +66,9 @@ jobs:
           git config --local user.email "xianshenglu@qq.com"
           git config --local user.name "xianshenglu"
           npm run release
-          
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       ## Distribute app to Firebase App Distribution for testing / use google play internal track if you have a google play account
       # - name: upload artifact to Firebase App Distribution
       #   uses: wzieba/Firebase-Distribution-Github-Action@v1
