--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -20,6 +20,11 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Set up our Node version
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.14
+
       - name: Install dependencies 
         run: npm ci 
 
