--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -13,12 +13,13 @@ jobs:
 
     steps:
       - name: Check out Git repository # clone the repo to local ci workspace
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up our JDK environment # setup JDK environment: mandatory as we need to build  android project
-        uses: actions/setup-java@v1.4.3
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          distribution: 'zulu'
+          java-version: 8
 
       - name: Set up our Node version
         uses: actions/setup-node@v3
@@ -30,18 +31,19 @@ jobs:
 
       # configure cash for gradle : will help to reduce build time
       - name: Cache Gradle Wrapper
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.gradle/wrapper
           key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
 
       - name: Cache Gradle Dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.gradle/caches
           key: ${{ runner.os }}-gradle-caches-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-caches-
+      
       - name: Make Gradlew Executable
         run: cd android && chmod +x ./gradlew
 
