--- a/.github/workflows/android_release.yml
+++ b/.github/workflows/android_release.yml
@@ -56,7 +56,9 @@ jobs:
       - name: Generate App APK
         run: |
           npm run build:release
-
+        env:
+          APP_CENTER_SECRET: ${{ secrets.APP_CENTER_SECRET }}
+          
       ## sign generated apk
       - name: Sign APK
         id: sign_app
