--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "eject": "expo eject",
     "test": "jest --watchAll",
     "build": "cd android && gradlew bundleRelease",
-    "prebuild": "ts-node ./gen-app-center-config.ts",
+    "prebuild": "ts-node ./prebuild.ts",
     "build:release": "npm run prebuild && cd android && ./gradlew assembleRelease --no-daemon",
     "install-on-device": "npm run prebuild && npx react-native run-android --variant=release",
+    "code-push": "npm run prebuild && appcenter codepush release-react -a xianshenglu/cloudflare-ip-tester-app -d Production",
+    "code-push:staging": "npm run prebuild && appcenter codepush release-react -a xianshenglu/cloudflare-ip-tester-app -d Staging",
     "changelog": "auto-changelog",
     "release": "release-it --ci",
     "devtool": "react-devtools"
@@ -29,6 +31,7 @@
     "appcenter-analytics": "4.4.5",
     "appcenter-crashes": "4.4.5",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.3",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -46,6 +49,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-code-push": "^7.1.0",
     "react-native-file-access": "^1.7.1",
     "react-native-localize": "^2.2.1",
     "react-native-paper": "^4.12.1",
