--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "react-devtools": "^4.24.6",
+    "react-native-dotenv": "^3.4.8",
     "react-test-renderer": "17.0.1",
     "release-it": "^15.0.0",
     "standard-version": "^9.3.2",
